@@ -6,7 +6,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
 @Configuration
 public class CorsConfig {
@@ -14,25 +15,45 @@ public class CorsConfig {
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-
-        // ✅ Permitir origen de tu frontend (Next.js)
-        corsConfig.setAllowedOrigins(List.of("http://localhost:3000"));
-
-        // ✅ Métodos HTTP permitidos
-        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        // ✅ Headers permitidos
-        corsConfig.setAllowedHeaders(List.of("*"));
-
-        // ✅ Permitir enviar cookies/autenticación si lo necesitas
+        
+        // Orígenes permitidos
+        corsConfig.setAllowedOrigins(Arrays.asList(
+            "http://localhost:3000",
+            "http://127.0.0.1:3000",
+            "http://localhost:3001"
+        ));
+        
+        // También puedes usar patrones
+        // corsConfig.setAllowedOriginPatterns(Collections.singletonList("*"));
+        
+        // Métodos HTTP permitidos
+        corsConfig.setAllowedMethods(Arrays.asList(
+            "GET", 
+            "POST", 
+            "PUT", 
+            "DELETE", 
+            "PATCH", 
+            "OPTIONS"
+        ));
+        
+        // Headers permitidos
+        corsConfig.setAllowedHeaders(Collections.singletonList("*"));
+        
+        // Headers expuestos al cliente
+        corsConfig.setExposedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type"
+        ));
+        
+        // Permitir credenciales (cookies, authorization headers)
         corsConfig.setAllowCredentials(true);
-
-        // ✅ Tiempo máximo de cacheo del preflight
+        
+        // Tiempo de cache de la respuesta preflight
         corsConfig.setMaxAge(3600L);
-
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfig);
-
+        
         return new CorsWebFilter(source);
     }
 }
